Kubernetes/working_solutions/AgroCRM _wth_MariaDB/agrocrm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agrocrm
  namespace: agrotech-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agrocrm
  template:
    metadata:
      labels:
        app: agrocrm
    spec:
      containers:
        - name: agrocrm
          image: bitnami/suitecrm
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /bitnami/suitecrm
              name: agrocrm-persistent-storage
      volumes:
        - name: agrocrm-persistent-storage
          persistentVolumeClaim:
            claimName: agrocrm-pvc
