Kubernetes/working_solutions/AgroCRM _wth_MariaDB/agrocrmdb-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: agrocrmdb
  namespace: agrotech-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agrocrmdb
  template:
    metadata:
      labels:
        app: agrocrmdb
    spec:
      containers:
        - name: agrocrmdb
          image: bitnami/mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /bitnami/mariadb
              name: agrocrmdb-persistent-storage
      volumes:
        - name: agrocrmdb-persistent-storage
          persistentVolumeClaim:
            claimName: agrocrmdb-pvc
